[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-provider-coalesce"
authors = [
    { name = "Mark van der Heijden", email = "mark@coalesce.io" }
]
license = { text = "Apache License 2.0" }
description = "A hook for Airflow and Astronomer to run Coalesce jobs"
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = [
    "version"
]
requires-python = "~=3.8"
dependencies = [
    "apache-airflow>=2.4"
]

[project.urls]
Homepage = "https://coalesce.io"
Source = "https://github.com/markvdh/coalesce_airflow_hook/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "coalesce_hook.__init__:get_provider_info"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "coalesce_hook.__version__" }

[tool.setuptools.packages.find]
exclude = [
    "*tests.*",
    "*tests"
]